Archive2/88/ae51ba3e47a8ad/output
In file included from /usr/include/c++/4.8/array:35:0,
                 from main.cpp:5:
/usr/include/c++/4.8/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
main.cpp: In function 'int main()':
main.cpp:10:5: error: 'array' is not a member of 'std'
     std::array<int, 3> a1{ {1,2,3} };  // double-braces required
     ^
main.cpp:10:16: error: expected primary-expression before 'int'
     std::array<int, 3> a1{ {1,2,3} };  // double-braces required
                ^
main.cpp:10:16: error: expected ';' before 'int'
main.cpp:22:1: error: expected '}' at end of input
 }
 ^
